--- a/10.2.0/angular/src/app/master-table/doctor-master/doctor-master.component.html
+++ b/10.2.0/angular/src/app/master-table/doctor-master/doctor-master.component.html
@@ -8,9 +8,9 @@
                     (click)="list()">
                     <span class="pi pi-refresh"></span>
                 </button>
-                <button type="button" class="btn btn-md add-btn" (click)="createDoctor()">
+                <!-- <button type="button" class="btn btn-md add-btn" (click)="createDoctor()">
                     <span class="pi pi-plus-circle mr-2"></span> Add
-                </button>
+                </button> -->
             </div>
         </div>
     </section>
