--- a/10.2.0/angular/src/app/nurse/view-appointment-receipt/view-appointment-receipt.component.html
+++ b/10.2.0/angular/src/app/nurse/view-appointment-receipt/view-appointment-receipt.component.html
@@ -5,7 +5,7 @@
     <div class="left">
       <div>
         <h1 class="hospital-name">{{hospitalName}}</h1>
-        <small class="meta-row">123 Medical Complex, Health Nagar, Mumbai-400001 • +91 9876543210 • GSTIN: 27ABCDE1234F1Z5</small>
+        <small class="meta-row">123 Medical Complex, Health Nagar, Mumbai-400001 • +91 9876543210</small>
       </div>
     </div>
     <div class="right">
