--- a/10.2.0/angular/src/app/roles/roles.component.html
+++ b/10.2.0/angular/src/app/roles/roles.component.html
@@ -12,14 +12,14 @@
                             <span class="pi pi-refresh"></span>
                         </button>
                     </div>
-                    <div class="btn-group mr-2" role="group" aria-label="Fourth group" (click)="createRole()">
+                    <!-- <div class="btn-group mr-2" role="group" aria-label="Fourth group" (click)="createRole()">
                         <button type="button" class="btn btn-md add-btn">
                             <div class="d-flex align-items-center justify-content-between">
                                 <span class="pi pi-plus-circle mr-2"></span>
                                 <span>New Role</span>
                             </div>
                         </button>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
